fixes + add scrollbar

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     min-height: 109.03px;
-    background-color: #141d2f;
+    background-color:  #141D2F;
     padding: 37px 100px;
     transition: all .2s ease;
     display: flex;
