--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #141d2f;
+    background-color: #141D2F;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
@@ -27,3 +27,37 @@ body {
     font-weight: 400;
     font-style: italic;
 }
+
+
+/* Firefox */
+* {
+    scrollbar-width: 20px; 
+    scrollbar-color: rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.1); 
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 18px; 
+}
+
+*::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1); 
+    border-radius: 10px; 
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 10px; 
+    border: 4px solid rgba(0, 0, 0, 0.1); 
+}
+
+/* Für horizontale Scrollbars */
+*::-webkit-scrollbar-horizontal {
+    height: 20px; 
+}
+
+*::-webkit-scrollbar-thumb:horizontal {
+    background-color: rgba(0, 0, 0, 0.5); 
+    border-radius: 10px; 
+}
+
